--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ background-color:black;
 
 }
 </style>
+<title>Spooksters</title>
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <body>
 <div class="bak1">
 </div>
